@@ -14,11 +14,13 @@ For a complete change history, see the SVN log.
 0.6.1 SVN
 ---------
 
+- OGCServer: Made lxml dependency optional (r986) (#303)
+
 - Rasters: Handle rounding to allow better alignment of raster layers (r1079) (#295)
 
 - AGG Renderer: Added option to control output JPEG quality (r1078) (#198)
 
-- Plugins: Fixed segfault in OGC Plugin with empty geometries (r1074) (#292)
+- Plugins: Fixed segfault in OGR Plugin with empty geometries (r1074) (#292)
 
 
 
